--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div id="icon"></div>
             <h1>홈페이지 준비중입니다.</h1>
             <p>오픈을 기다려주세요!</p>
-            <button id="beBtn">이전 페이지로 돌아가기</button>
+            <button id="beBtn">블로그로 돌아가기</button>
         </div>
     </div>
 </body>
